--- a/index.html
+++ b/index.html
@@ -7,16 +7,10 @@
     <title>Namaste React Tutorial</title>
   </head>
   <body>
-    <div id="root"></div>
-    <script
-      crossorigin
-      src="https://unpkg.com/react@18/umd/react.development.js"
-    ></script>
-    <script
-      crossorigin
-      src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"
-    ></script>
+    <div id="root">
+      <h1>Hello</h1>
+    </div>
 
-    <script src="./app.js"></script>
+    <script type="module" src="./app.js"></script>
   </body>
 </html>
